finalização dos cruds e ajustes dos campos de data dos eventos e integração com a API de CEP

--- a/jt-eventos/src/app/components/establishments/establishments-form/establishments-form.component.html
+++ b/jt-eventos/src/app/components/establishments/establishments-form/establishments-form.component.html
@@ -35,27 +35,27 @@
       </div>
       <div class="form-group">
         <strong><label for="Street" class="control-label">Logradouro</label></strong>
-        <input type="text" id="Street" #Street class="form-control" [(ngModel)]="establishment.street" [ngModelOptions]="{standalone: true}" readonly />
+        <input type="text" id="Street" class="form-control" [(ngModel)]="establishment.street" [ngModelOptions]="{standalone: true}" readonly />
       </div>
       <div class="form-group col-md-6">
         <strong><label for="StreetNumber" class="control-label">Número</label></strong>
-        <input type="text" id="StreetNumber" #StreetNumber class="form-control" [(ngModel)]="establishment.streetNumber" [ngModelOptions]="{standalone: true}" required />
+        <input type="text" id="StreetNumber" class="form-control" [(ngModel)]="establishment.streetNumber" [ngModelOptions]="{standalone: true}" required />
       </div>
       <div class="form-group col-md-6">
         <strong><label for="StreetComplement" class="control-label">Complemento</label></strong>
-        <input type="text" id="StreetComplement" #StreetComplement class="form-control" [(ngModel)]="establishment.streetComplement" [ngModelOptions]="{standalone: true}" />
+        <input type="text" id="StreetComplement" class="form-control" [(ngModel)]="establishment.streetComplement" [ngModelOptions]="{standalone: true}" />
       </div>
       <div class="form-group">
         <strong><label for="Neighborhood" class="control-label">Bairro</label></strong>
-        <input type="text" id="Neighborhood" #Neighborhood class="form-control" [(ngModel)]="establishment.neighborhood" [ngModelOptions]="{standalone: true}" readonly />
+        <input type="text" id="Neighborhood" class="form-control" [(ngModel)]="establishment.neighborhood" [ngModelOptions]="{standalone: true}" readonly />
       </div>
       <div class="form-group col-md-10">
         <strong><label for="City" class="control-label">Cidade</label></strong>
-        <input type="text" id="City" #City class="form-control" [(ngModel)]="establishment.city" [ngModelOptions]="{standalone: true}" readonly />
+        <input type="text" id="City" class="form-control" [(ngModel)]="establishment.city" [ngModelOptions]="{standalone: true}" readonly />
       </div>
       <div class="form-group col-md-2">
         <strong><label for="State" class="control-label">UF</label></strong>
-        <input type="text" id="State" #State class="form-control" [(ngModel)]="establishment.state" [ngModelOptions]="{standalone: true}" readonly />
+        <input type="text" id="State" class="form-control" [(ngModel)]="establishment.state" [ngModelOptions]="{standalone: true}" readonly />
       </div>
     </div>
   </form>
