--- a/jt-eventos/src/app/components/users/users-details/users-details.component.html
+++ b/jt-eventos/src/app/components/users/users-details/users-details.component.html
@@ -34,9 +34,9 @@
       </div>
 
       <div class="col-8">
-        <p>Administrador</p>
-        <p>Thiago</p>
-        <p>thiago_user</p>
+        <p>{{ user.role }}</p>
+        <p>{{ user.name }}</p>
+        <p>{{ user.username }}</p>
       </div>
     </div>
   </div>
