--- a/jt-eventos/src/app/components/customers/customers-form/customers-form.component.html
+++ b/jt-eventos/src/app/components/customers/customers-form/customers-form.component.html
@@ -51,27 +51,27 @@
       </div>
       <div class="form-group">
         <strong><label for="Street" class="control-label">Logradouro</label></strong>
-        <input id="Street" #Street class="form-control" [(ngModel)]="customer.street" [ngModelOptions]="{standalone: true}" readonly />
+        <input id="Street" class="form-control" [(ngModel)]="customer.street" [ngModelOptions]="{standalone: true}" required />
       </div>
       <div class="form-group col-md-6">
         <strong><label for="StreetNumber" class="control-label">Número</label></strong>
-        <input id="StreetNumber" #StreetNumber class="form-control" [(ngModel)]="customer.streetNumber" [ngModelOptions]="{standalone: true}" required />
+        <input id="StreetNumber" class="form-control" [(ngModel)]="customer.streetNumber" [ngModelOptions]="{standalone: true}" required />
       </div>
       <div class="form-group col-md-6">
         <strong><label for="StreetComplement" class="control-label">Complemento</label></strong>
-        <input id="StreetComplement" #StreetComplement class="form-control" [(ngModel)]="customer.streetComplement" [ngModelOptions]="{standalone: true}" />
+        <input id="StreetComplement" class="form-control" [(ngModel)]="customer.streetComplement" [ngModelOptions]="{standalone: true}" required />
       </div>
       <div class="form-group">
         <strong><label for="Neighborhood" class="control-label">Bairro</label></strong>
-        <input id="Neighborhood" #Neighborhood class="form-control" [(ngModel)]="customer.neighborhood" [ngModelOptions]="{standalone: true}" readonly />
+        <input id="Neighborhood" class="form-control" [(ngModel)]="customer.neighborhood" [ngModelOptions]="{standalone: true}" required />
       </div>
       <div class="form-group col-md-10">
         <strong><label for="City" class="control-label">Cidade</label></strong>
-        <input id="City" #City class="form-control" [(ngModel)]="customer.city" [ngModelOptions]="{standalone: true}" readonly />
+        <input id="City" class="form-control" [(ngModel)]="customer.city" [ngModelOptions]="{standalone: true}" required />
       </div>
       <div class="form-group col-md-2">
         <strong><label for="State" class="control-label">UF</label></strong>
-        <input id="State" #State class="form-control" [(ngModel)]="customer.state" [ngModelOptions]="{standalone: true}" readonly />
+        <input id="State" class="form-control" [(ngModel)]="customer.state" [ngModelOptions]="{standalone: true}" required />
       </div>
     </div>
   </form>
