--- a/jt-eventos/src/app/components/events/events-details/events-details.component.html
+++ b/jt-eventos/src/app/components/events/events-details/events-details.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="btn-group me-2" role="group">
-    <button type="button" class="btn btn-outline-primary" routerLink="/events/edit/{}">
+    <button type="button" class="btn btn-outline-primary" routerLink="/events/edit/{{ event._id }}">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
         <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
       </svg>&nbsp;
@@ -18,7 +18,7 @@
   </div>
 
   <div class="btn-group me-2" role="group">
-    <button class="btn btn-outline-danger" (click)="openDelete()">
+    <button class="btn btn-outline-danger" (click)="openDelete(event._id)">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
         <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z" />
       </svg>&nbsp;
@@ -55,11 +55,11 @@
       </div>
 
       <div class="col-8">
-        <p>Casamento</p>
-        <p>Jonas Pohlmann</p>
-        <p>Salão Gotas de Prata</p>
-        <p>Casamento Luzia</p>
-        <p>03/02/2023 à 04/02/2023</p>
+        <p>{{ event.eventTypeId }}</p>
+        <p>{{ event.customerId }}</p>
+        <p>{{ event.establishmentId }}</p>
+        <p>{{ event.description }}</p>
+        <p>{{ event.startDate }} à {{ event.finishDate }}</p>
       </div>
     </div>
 
@@ -68,14 +68,8 @@
     <div class="form-group">
       <strong><label class="control-label">Lista de convidados:</label></strong>
       <br>
-      <ul>
-        <label class="control-label">
-          <li>Thiago</li>
-          <li>Roberto</li>
-          <li>Bruna</li>
-          <li>Salem</li>
-          <li>Lorena</li>
-        </label>
+      <ul *ngFor="let invitees of list">
+        <li><label class="control-label">{{ invitees.inviteList }}</label></li>
       </ul>
     </div>
   </div>
@@ -95,7 +89,7 @@
 
   <div class="row no-gutters">
     <div class="col">
-      <h1 class="h1">{{ description }}</h1>
+      <h1 class="h1">{{ event.description }}</h1>
     </div>
   </div>
 
@@ -106,8 +100,8 @@
     </div>
 
     <div class="col-9">
-      <p class="report">Casamento</p>
-      <p class="report">02/03/2023 à 03/03/2023</p>
+      <p class="report">{{ event.eventTypeId }}</p>
+      <p class="report">{{ event.startDate }} à {{ event.finishDate }}</p>
     </div>
   </div>
 
@@ -119,7 +113,7 @@
     </div>
 
     <div class="col-9">
-      <p class="report">Jonas Pohlmann</p>
+      <p class="report">{{ event.customerId }}</p>
       <p class="report">5133333333 | 51999999999</p>
       <p class="report">Rua A, 123, Casa 2, Ingleses - Florianópolis/SC, CEP: 11000000</p>
     </div>
@@ -132,7 +126,7 @@
     </div>
 
     <div class="col-9">
-      <p class="report">Casa de Festas</p>
+      <p class="report">{{ event.establishmentId }}</p>
       <p class="report">Avenida B, 321, Segundo andar, Canasvieiras - Florianópolis/SC, CEP: 12000000</p>
     </div>
   </div>
@@ -141,11 +135,7 @@
     <div class="col">
       <p class="report label">Lista de convidados:</p>
       <ul class="disclaimer">
-        <li class="report">Thiago</li>
-        <li class="report">Roberto</li>
-        <li class="report">Bruna</li>
-        <li class="report">Salem</li>
-        <li class="report">Lorena</li>
+        <li class="report">{{ event.inviteList }}</li>
       </ul>
     </div>
   </div>
