--- a/jt-eventos/src/app/components/events/events-form/events-form.component.html
+++ b/jt-eventos/src/app/components/events/events-form/events-form.component.html
@@ -47,41 +47,14 @@
         <strong><label for="Description" class="control-label">Descrição</label></strong>
         <input id="Description" class="form-control" [(ngModel)]="event.description" [ngModelOptions]="{standalone: true}" required />
       </div>
-
-      <!-- Datepicker -->
       <div class="form-group col-md-6">
         <strong><label for="StartDate" class="control-label">Data inicial</label></strong>
-        <div class="dp-hidden position-absolute">
-          <div class="input-group">
-            <input name="datepicker" class="form-control" ngbDatepicker #datepicker="ngbDatepicker" [autoClose]="'outside'" (dateSelect)="onDateSelection($event)" [displayMonths]="2" [dayTemplate]="t" outsideDays="hidden" [startDate]="fromDate!" tabindex="-1" />
-            <ng-template #t let-date let-focused="focused">
-              <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)" [class.faded]="isHovered(date) || isInside(date)" (mouseenter)="hoveredDate = date" (mouseleave)="hoveredDate = null">{{ date.day }}</span>
-            </ng-template>
-          </div>
-        </div>
-        <div class="input-group">
-          <input [(ngModel)]="event.startDate" [ngModelOptions]="{standalone: true}" #dpFromDate class="form-control" name="dpFromDate" [value]="formatter.format(fromDate)" (input)="fromDate = validateInput(fromDate, dpFromDate.value)" required />
-          <button class="btn btn-outline-secondary" (click)="datepicker.toggle()" type="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
-              <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
-              <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-            </svg>
-          </button>
-        </div>
+        <input type="date" id="StartDate" class="form-control" [(ngModel)]="event.startDate" [ngModelOptions]="{standalone: true}" required />
       </div>
       <div class="form-group col-md-6">
-          <strong><label for="FinishDate" class="control-label">Data final</label></strong>
-          <div class="input-group">
-            <input [(ngModel)]="event.finishDate" [ngModelOptions]="{standalone: true}" #dpToDate class="form-control" name="dpToDate" [value]="formatter.format(toDate)" (input)="toDate = validateInput(toDate, dpToDate.value)" required />
-            <button class="btn btn-outline-secondary" (click)="datepicker.toggle()" type="button">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
-                <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
-                <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-              </svg>
-            </button>
-          </div>
+        <strong><label for="FinishDate" class="control-label">Data final</label></strong>
+        <input type="date" id="FinishDate" class="form-control" [(ngModel)]="event.finishDate" [ngModelOptions]="{standalone: true}" required />
       </div>
-
       <div class="form-group">
         <strong><label for="InviteList" class="control-label">Lista de convidados</label></strong>
         <textarea [(ngModel)]="event.inviteList" [ngModelOptions]="{standalone: true}" id="InviteList" class="form-control"></textarea>
