--- a/jt-eventos/src/app/components/users/users-form/users-form.component.html
+++ b/jt-eventos/src/app/components/users/users-form/users-form.component.html
@@ -41,13 +41,9 @@
         <strong><label for="Username" class="control-label">Usuário</label></strong>
         <input id="Username" [(ngModel)]="user.username" [ngModelOptions]="{standalone: true}" class="form-control" required />
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group">
         <strong><label for="Password" class="control-label">Senha</label></strong>
         <input type="password" #Password id="Password" [(ngModel)]="user.password" [ngModelOptions]="{standalone: true}" class="form-control" required />
-      </div>
-      <div class="form-group col-md-6">
-        <strong><label for="ConfirmPassword" class="control-label">Confirmar senha</label></strong>
-        <input type="password" #ConfirmPassword id="ConfirmPassword" class="form-control" required />
       </div>
     </div>
   </form>
