--- a/jt-eventos/src/app/components/customers/customers-form/customers-form.component.html
+++ b/jt-eventos/src/app/components/customers/customers-form/customers-form.component.html
@@ -47,7 +47,7 @@
       </div>
       <div class="form-group">
         <strong><label for="Cep" class="control-label">CEP</label></strong>
-        <input id="Cep" #Cep class="form-control" (blur)="searchCep()" [(ngModel)]="customer.cep" [ngModelOptions]="{standalone: true}" required />
+        <input id="Cep" #Cep class="form-control" (blur)="viaCep.searchCep(customer)" [(ngModel)]="customer.cep" [ngModelOptions]="{standalone: true}" required />
       </div>
       <div class="form-group">
         <strong><label for="Street" class="control-label">Logradouro</label></strong>
