--- a/jt-eventos/src/app/components/users/users-table/users-table.component.html
+++ b/jt-eventos/src/app/components/users/users-table/users-table.component.html
@@ -18,7 +18,7 @@
     <div class="mb-3 row">
       <label for="table-filtering-search" class="col-xs-3 col-sm-auto col-form-label">Pesquisar:</label>
       <div class="col-xs-3 col-sm-auto">
-        <input id="table-filtering-search" class="form-control" type="text" [(ngModel)]="searchField" [ngModelOptions]="{standalone: true}" />
+        <input id="table-filtering-search" class="form-control" type="search" [(ngModel)]="searchField" [ngModelOptions]="{standalone: true}" />
       </div>
     </div>
   </form>
